# CQ-editor

./: .codecov.yml  .coveragerc  .gitignore  .travis.yml  Brito  Downspout junction  Gioăng O & nút bịt cao su  README.md  README.md~  anders_patch.txt~  appveyor.yml  azure-pipelines-build.yml  azure-pipelines.yml  bundle.py  changes.md  collect_icons.py  commit.txt  commit.txt~  cqgui_env.yml  environment.yml  pyinstaller.spec  pyinstaller_pip.spec  pyproject.toml  pytest.ini  run.py  run.spec  runtests_locally.sh  setup.py
.circleci/: config.yml
.github/: FUNDING.yml  funding.yml
.github/workflows/: appimage-build.yml  build.yml  constructor.yml  lint.yml  pyinstaller-build-pip.yml  pyinstaller-builds-actions-PIP-TAR.yml  pyinstaller-builds-actions-build-PIP-TAR-pyinst5-6p.yml  pyinstaller-builds-actions-mmamba-TAR.yml  pyinstaller-builds-actions-mmamba.yml  pyinstaller-builds-actions.yml  test_linux.yml  tests.yml
appimage/: CQ-editor.desktop  appimage-build.sh
conda/: construct.yaml  meta.yaml  run.bat  run.sh
cq_editor/: __main__.py  __main__.py~  cq_utils.py  cqe_run.py  debugger_locals.py  display.py  editor.py  icons.py  icons_res.py  main_window.py  main_window.py~  mixins.py  mixins.py~  preferences.py  preferences.py~  utils.py
cq_editor/widgets/: ai_chat.py  clipping_planes.py  code_editor.py  console.py  console.py~  cq_object_inspector.py  cq_utils.py  debugger.py  editor.py  editor.py~  log.py  navigation_cube.py  object_tree.py  (+7 more)
examples/: 01_hello_box.py  02_selectors_and_fillets.py  03_extruded_profile.py  04_holes_and_counterbores.py  05_loft.py  06_sweep.py  07_pillow_block.py  08_assembly.py
flatpak/: org.cadquery.cadquery-editor.desktop  org.cadquery.cadquery-editor.yaml
icons/: cadquery_logo_dark.icns
macos/: CQDiskImageIcon.icns  README.md  brew.sh  cq_dmg_settings.py  macos_env.yml  makeapp.sh  makedmg.sh
pyinstaller/: CQ-editor-mac.sh  CQ-editor.cmd  CQ-editor.sh  pyi_rth_casadi.py  pyi_rth_fontconfig.py  pyi_rth_occ.py  pyi_rth_qt_xcb.py
src/: cq_utils.py  icons.py  icons_res.py  layouts.py  main.py  main_window.py  mixins.py  preferences.py  utils.py  widgets.py
tests/: test_ai_chat.py  test_app.py  test_cq_utils.py  test_display.py  test_editor.py  test_main_window.py  test_navigation_cube.py
(+12 files in other folders)
